--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'compass';
 @import './src/scss/others/bootstrap.scss';
 @import './src/scss/others/_variables.scss';
+@import './src/scss/others/_fonts.scss';
 
 
 $bg:rgb(255, 255, 255);
