--- a/src/web_pages/layouts/default.html
+++ b/src/web_pages/layouts/default.html
@@ -27,6 +27,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	{{> header}}
-	{{> body}}
+  {{> body}}
+  {{> footer}}
 </body>
 </html>
