--- a/src/web_pages/partials/footer.html
+++ b/src/web_pages/partials/footer.html
@@ -1,20 +1,39 @@
 <script type="text/javascript" src="/js/jquery.min.js"></script>
- <!-- @if isProduction -->
+<!-- @if isBundle -->
+<!-- @if isProduction -->
+<script src="{{root}}/js/bundle.min.js"></script>
+<!-- @endif -->
+<!-- @if !isProduction -->
+<script src="{{root}}/js/bundle.js"></script>
+<!-- @endif -->
+<!-- @endif -->
+<!-- @if !isBundle -->
+<!-- @if isProduction -->
 <script src="{{root}}/js/assets.min.js"></script>
 <script src="{{root}}/js/<!-- @echo js -->.min.js"></script>
 <!-- @endif -->
+<!-- @if !isProduction -->
+<script src="{{root}}/js/assets.js"></script>
+<script src="{{root}}/js/<!-- @echo js -->.js"></script>
+<!-- @endif -->
+<!-- @endif -->
 
- <!-- @if !isProduction -->
- <script src="{{root}}/js/assets.js"></script>
- <script src="{{root}}/js/<!-- @echo js -->.js"></script>
- <!-- @endif -->
 
- <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
- <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script>
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function(b, o, i, l, e, r) {
+        b.GoogleAnalyticsObject = l;
+        b[l] || (b[l] =
+            function() {
+                (b[l].q = b[l].q || []).push(arguments)
+            });
+        b[l].l = +new Date;
+        e = o.createElement(i);
+        r = o.getElementsByTagName(i)[0];
+        e.src = '//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+</script>
